web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-inside-arguments-of-async-call-inside-parameters-of-async-arrow-function/output.txt
[SyntaxError]: await expression can not used in parameter list (2,24)
2|  async (x = async(y = await 2)) => {};
 |                      ^
